# pciutils_template

./: .clang-format  LICENSE  README.md  meson.build
assets/: meson.build  program_icon.rc  program_rc.rc
src/: example.c  main.c  meson.build  rc_manager.c  rc_manager.h  rcdata.h
subprojects/: .gitignore  pciutils.wrap
subprojects/packagefiles/pciutils/: 03-pciutils-windows-msvc-compat.patch  04-pciutils-use-pci.ids.gz-by-default.patch  pciutils-windows-directio.patch
subprojects/packagefiles/pciutils/meson/: config.h  meson.build
